--- a/pages/index/index.axml
+++ b/pages/index/index.axml
@@ -3,6 +3,7 @@
 
   <view class="row">
     <button class="number-button"data-page="pages/mahjong1/mahjong1" onTap="handleButtonClick1">1</button>
+    <!--点击按钮会触发js代码中的handleButtonClick1函数块 -->
     <button class="number-button"data-page="pages/mahjong2/mahjong2" onTap="handleButtonClick1">2</button>
     <button class="number-button"data-page="pages/mahjong3/mahjong3" onTap="handleButtonClick1">3</button>
     <button class="number-button"data-page="pages/mahjong4/mahjong4" onTap="handleButtonClick1">4</button>
