--- a/pages/mahjong1/mahjong1.axml
+++ b/pages/mahjong1/mahjong1.axml
@@ -2,4 +2,5 @@
   <button id="amountButton" data-amount="3.00" onTap="onTapAmountButton">1小时 3元</button>
   <!-- ... 其他页面内容 -->
   <button id="payButton" onTap="onTapPayButton">2小时 5元</button>
+  <button onTap="mqtt">测试mqtt</button>
 </view>
